updated all files

--- a/index.html
+++ b/index.html
@@ -13,34 +13,38 @@
 
 <body>
     <header>
-        <h1>Homes for Hounds</h1>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="dogs.html">Meet our Dogs</a>
-                </li>
-                <li>
-                    <a href="form.html">Get in Touch</a>
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <h1>Homes for Hounds</h1>
     </header>
-    <section>
-        <div id="hero-image">
 
-        </div>
-        hero image and text overlay in here
-    </section>
+    <nav>
+        <a href="index.html" aria-label="Go to the top of the page">Home</a>
+        <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
+        <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
+    </nav>
+
+    <div>
+        <img src="assets/images/Greyhound_and_sunset.jpg" alt="greyhound in field" id="hero-image">
+    </div>
+
     <section>
-        reasons for adopting in here
+        <span>
+            About Us
+        </span>
     </section>
+
     <section>
-        breed information
+        <span>
+            Latest News
+        </span>
     </section>
+
+    <section>
+        <span>
+            Articles
+        </span>
+    </section>
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
@@ -48,6 +52,7 @@
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
         </ul>
+        <p>Copyright © Homes for Hounds 2023</p>
     </footer>
 </body>
 
