text updated and word-wrap applied

--- a/index.html
+++ b/index.html
@@ -24,36 +24,37 @@
     </nav>
 
     <div>
-        <img src="assets/images/Greyhound_and_sunset.jpg" alt="greyhound in field" id="hero-image">
+        <img src="assets/images/Greyhound_and_sunset.jpg" alt="greyhound in silhouette" id="hero-image">
     </div>
 
-    <section>
-        <span>
-            About Us
-        </span>
-    </section>
+    <div class="columns">
+        <h2>About Us</h2>
+        <p>Homes for hounds are a charity deicated to the re-homing of retired racing greyhounds. These dogs settle into
+            retirement easily and make wonderful pets.
+        </p>
+    </div>
 
-    <section>
-        <span>
-            Latest News
-        </span>
-    </section>
+    <div class="columns">
+        <h2>Latest News</h2>
+        <p>25/06/23 New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
+    </div>
 
-    <section>
-        <span>
-            Articles
-        </span>
-    </section>
+    <div class="columns">
+        <h2>Articles</h2>
+        <p>Please follow the links for info on this gentle breed and articles on how to care for them.</p>
+    </div>
 
     <footer>
+
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
         </ul>
-        <p>Copyright © Homes for Hounds 2023</p>
+        <h3>Copyright © Homes for Hounds 2023</h2>
     </footer>
+
 </body>
 
 </html>
