Started to build form on contact page

--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
 
     <div class="columns">
         <h2>About Us</h2>
-        <p>Homes for hounds are a charity deicated to the re-homing of retired racing greyhounds. These dogs settle into
-            retirement easily and make wonderful pets.
-        </p>
+        <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs settle
+            into retirement easily and make wonderful pets.</p>
+        <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs suitable
+            for all types of households including those with children and other animals.</p>
+        <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the house.
+            they have a naturally calm, laid-back temperament and adapt from life on the track to life on the couch with
+            ease. </p>
     </div>
 
     <div class="columns">
         <h2>Latest News</h2>
         <p>25/06/23 New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
+        <p>01/05/23 Open day at the centre, why not come along and meet our hounds.</p>
+        <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
+            activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
+        <p>01/01/23 Happy New Year from all the hounds!</p>
     </div>
 
     <div class="columns">
