--- a/dogs.html
+++ b/dogs.html
@@ -6,9 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet our Dogs</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+    <nav>
+        <a href="index.html" aria-label="Go to the top of the page">Home</a>
+        <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
+        <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
+    </nav>
 
 </body>
 
