used bootstrap to configure 3 columns on home page

--- a/form.html
+++ b/form.html
@@ -23,10 +23,10 @@
     <form method="POST" action="https://formdump.codeinstitute.net/">
 
         <label for="name">Name:</label>
-        <input id="name" type="text">
+        <input id="name" type="text" required>
         <br>
         <label for="email">Email:</label>
-        <input id="email" type="email">
+        <input id="email" type="email" required>
         <br>
         <label for="phone">Phone No:</label>
         <input id="phone" type="tel">
