--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homes for Hounds</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
@@ -27,33 +28,37 @@
         <img src="assets/images/Greyhound_and_sunset.jpg" alt="greyhound in silhouette" id="hero-image">
     </div>
 
-    <div class="columns">
-        <h2>About Us</h2>
-        <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs settle
-            into retirement easily and make wonderful pets.</p>
-        <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs suitable
-            for all types of households including those with children and other animals.</p>
-        <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the house.
-            they have a naturally calm, laid-back temperament and adapt from life on the track to life on the couch with
-            ease. </p>
+    <div class="row">
+        <div class="col-sm-4">
+            <h2>About Us</h2>
+            <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs settle
+                into retirement easily and make wonderful pets.</p>
+            <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
+                suitable
+                for all types of households including those with children and other animals.</p>
+            <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
+                house.
+                they have a naturally calm, laid-back temperament and adapt from life on the track to life on the couch
+                with
+                ease. </p>
+        </div>
+        <div class="col-sm-4">
+            <h2>Latest News</h2>
+            <p>25/06/23 New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
+            <p>01/05/23 Open day at the centre, why not come along and meet our hounds.</p>
+            <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
+                activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
+            <p>01/01/23 Happy New Year from all the hounds!
+            </p>
+        </div>
+        <div class="col-sm-4">
+            <h2>Articles</h2>
+            <p>Please follow the links for info on this gentle breed and articles on how to care for them.</p>
+        </div>
     </div>
-
-    <div class="columns">
-        <h2>Latest News</h2>
-        <p>25/06/23 New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
-        <p>01/05/23 Open day at the centre, why not come along and meet our hounds.</p>
-        <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
-            activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
-        <p>01/01/23 Happy New Year from all the hounds!</p>
-    </div>
-
-    <div class="columns">
-        <h2>Articles</h2>
-        <p>Please follow the links for info on this gentle breed and articles on how to care for them.</p>
     </div>
 
     <footer>
-
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
@@ -62,7 +67,6 @@
         </ul>
         <h3>Copyright © Homes for Hounds 2023</h2>
     </footer>
-
 </body>
 
 </html>
