--- a/dogs.html
+++ b/dogs.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet our Dogs</title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,6 +19,47 @@
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
 
+    <div class="card-deck">
+        <div class="card bg-primary">
+            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+            <div class="card-body text-center">
+                <h4 class="card-title">Hawk</h4>
+                <i class="fab-solid fa-house"></i>
+                <p class="card-text">7 yr old, Female</p>
+                <p class="card-text">Fully house-trained</p>
+                <p class="card-text">Good with other dogs</p>
+                <p class="card-text">Good with children</p>
+            </div>
+        </div>
+        <div class="card bg-warning">
+            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the second card</p>
+            </div>
+        </div>
+        <div class="card bg-success">
+            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the third card</p>
+            </div>
+        </div>
+        <div class="card bg-danger">
+            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the fourth card</p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <footer>
+        <ul class="social-networks">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+        </ul>
+        <h3>Copyright © Homes for Hounds 2023</h2>
+    </footer>
 </body>
 
 </html>
