--- a/form.html
+++ b/form.html
@@ -6,19 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Get in Touch</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+    <!-- Bootstrap nav bar
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="dogs.html">Meet Our Dogs</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="form.html">Get in Touch</a>
+            </li>
+        </ul>-->
     <nav>
         <a href="index.html" aria-label="Go to the top of the page">Home</a>
         <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
     <h2>Get in Touch</h2>
-    <p>Please use this form to enquire about our dogs. We love to hear from potential new owners and will get back to
+    <p>Please use this form to enquire about our dogs. We love to hear from potential new owners and will get back
+        to
         you to discuss the rehoming process in more detail</p>
     <form method="POST" action="https://formdump.codeinstitute.net/">
 
@@ -54,6 +69,16 @@
             width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
+    <footer>
+        <ul class="social-networks">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+        </ul>
+        <h3>Copyright © Homes for Hounds 2023</h2>
+    </footer>
 </body>
 
 </html>
