--- a/dogs.html
+++ b/dogs.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet our Dogs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -20,43 +19,55 @@
     </nav>
 
     <div class="card-deck">
-        <div class="card bg-primary">
-            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
-            <div class="card-body text-center">
+        <div class="card bg-light text-dark">
+            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
+            <div class="card-body text-left">
                 <h4 class="card-title">Hawk</h4>
-                <i class="fab-solid fa-house"></i>
                 <p class="card-text">7 yr old, Female</p>
+                <i class="fas fa-house"></i>
                 <p class="card-text">Fully house-trained</p>
                 <p class="card-text">Good with other dogs</p>
                 <p class="card-text">Good with children</p>
             </div>
         </div>
-        <div class="card bg-warning">
-            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+        <div class="card bg-light text-dark">
+            <img class="card-img-top" src="assets/images/edie.jpg" alt="Photo of dog">
             <div class="card-body text-center">
-                <p class="card-text">Some text inside the second card</p>
+                <h4 class="card-title">Edie</h4>
+                <p class="card-text">2 yr old, Female</p>
+                <p class="card-text">Fully house-trained</p>
+                <p class="card-text">Good with other dogs</p>
+                <p class="card-text">Good with children</p>
             </div>
         </div>
-        <div class="card bg-success">
-            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+        <div class="card bg-light text-dark">
+            <img class="card-img-top" src="assets/images/trevor_new.jpg" alt="Photo of dog">
             <div class="card-body text-center">
-                <p class="card-text">Some text inside the third card</p>
+                <h4 class="card-title">Trevor</h4>
+                <p class="card-text">2 yr old, Male</p>
+                <p class="card-text">Fully house-trained</p>
+                <p class="card-text">Not good with other dogs</p>
+                <p class="card-text">Good with children</p>
             </div>
         </div>
-        <div class="card bg-danger">
-            <img class="card-img-top" src="assets/images/pexels-tonia-kraakman-9610641.jpg" alt="Photo of dog">
+        <div class="card bg-light text-dark">
+            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
             <div class="card-body text-center">
-                <p class="card-text">Some text inside the fourth card</p>
+                <h4 class="card-title">Dotty</h4>
+                <p class="card-text">18 month old, Female</p>
+                <p class="card-text">Not house-trained</p>
+                <p class="card-text">Good with other dogs</p>
+                <p class="card-text">Good with children</p>
+            </div>
             </div>
         </div>
-    </div>
-    </div>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+                
         </ul>
         <h3>Copyright © Homes for Hounds 2023</h2>
     </footer>
