--- a/form.html
+++ b/form.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Get in Touch</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -33,8 +32,7 @@
     </nav>
     <h2>Get in Touch</h2>
     <p>Please use this form to enquire about our dogs. We love to hear from potential new owners and will get back
-        to
-        you to discuss the rehoming process in more detail</p>
+        to you to discuss the rehoming process in more detail</p>
     <form method="POST" action="https://formdump.codeinstitute.net/">
 
         <label for="name">Name:</label>
@@ -66,7 +64,7 @@
     <section id="map-wrapper">
         <iframe id="map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
-            width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            width="400" height="800" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
