--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homes for Hounds</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,7 +24,7 @@
     </nav>
 
     <div>
-        <img src="assets/images/Greyhound_and_sunset.jpg" alt="greyhound in silhouette" id="hero-image">
+        <img src="assets/images/greyhound_and_sunset.jpg" alt="greyhound in silhouette" id="hero-image">
     </div>
 
     <div class="row">
