--- a/dogs.html
+++ b/dogs.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet our Dogs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />-->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -17,27 +19,32 @@
         <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
+    <div>
+        <h3>Here are all the dogs currently available. If you are interested and need more information please contact us
+            using the form on the 'Get in Touch' page</h3>
+    </div>
 
     <div class="card-deck">
         <div class="card bg-light text-dark">
             <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
-            <div class="card-body text-left">
+            <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
                 <p class="card-text">7 yr old, Female</p>
-                <i class="fas fa-house"></i>
-                <p class="card-text">Fully house-trained</p>
-                <p class="card-text">Good with other dogs</p>
-                <p class="card-text">Good with children</p>
+                <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Not cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/edie.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Photo of dog">
             <div class="card-body text-center">
-                <h4 class="card-title">Edie</h4>
+                <h4 class="card-title">Mimi</h4>
                 <p class="card-text">2 yr old, Female</p>
-                <p class="card-text">Fully house-trained</p>
-                <p class="card-text">Good with other dogs</p>
-                <p class="card-text">Good with children</p>
+                <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
         <div class="card bg-light text-dark">
@@ -45,9 +52,10 @@
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
                 <p class="card-text">2 yr old, Male</p>
-                <p class="card-text">Fully house-trained</p>
-                <p class="card-text">Not good with other dogs</p>
-                <p class="card-text">Good with children</p>
+                <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Not good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Not cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
         <div class="card bg-light text-dark">
@@ -55,19 +63,32 @@
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
-                <p class="card-text">Not house-trained</p>
-                <p class="card-text">Good with other dogs</p>
-                <p class="card-text">Good with children</p>
-            </div>
+                <p class="card-text"><i class="fas fa-house"></i> Not house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
+        <div class="card bg-light text-dark">
+            <img class="card-img-top" src="assets/images/anton.jpg" alt="Photo of dog">
+            <div class="card-body text-center">
+                <h4 class="card-title">Anton</h4>
+                <p class="card-text">3 yr old, Male</p>
+                <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Not cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Not suitable for children under 12</p>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
-                
+
         </ul>
         <h3>Copyright © Homes for Hounds 2023</h2>
     </footer>
