--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homes for Hounds</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -53,6 +54,23 @@
         <div class="col-sm-4">
             <h2>Articles</h2>
             <p>Please follow the links for info on this gentle breed and articles on how to care for them.</p>
+            <ul>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
+                        target="_blank">Are you ready to adopt a greyhound?</a></li>
+                <li><a rel="external"
+                        href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
+                        target="_blank">What is your greyhound thinking?</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
+                        target="_blank">Travelling safely with your greyhound</a></li>
+                <li><a rel="external"
+                        href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
+                        target="_blank">Understanding separation anxiety</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive"
+                        target="_blank">What is prey drive?</a></li>
+                <li><a rel="external"
+                        href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
+                        target="_blank">Guide to nail and teeth care</a></li>
+            </ul>
         </div>
     </div>
     </div>
@@ -63,6 +81,7 @@
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+
         </ul>
         <h3>Copyright © Homes for Hounds 2023</h2>
     </footer>
