margins adjusted on form.html

--- a/form.html
+++ b/form.html
@@ -31,11 +31,10 @@
         <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
-    <h2>Get in Touch</h2>
+    <h2 class="h2-form">Get in Touch</h2>
     <p>Please use this form to enquire about our dogs. We love to hear from potential new owners and will get back
         to you to discuss the rehoming process in more detail</p>
     <form method="POST" action="https://formdump.codeinstitute.net/">
-
         <label for="name">Name:</label>
         <input id="name" type="text" required>
         <br>
@@ -48,9 +47,10 @@
         <label for="dogs">Name of dog:</label>
         <select id="dogs" name="dogs">
             <option value="hawk">Hawk</option>
-            <option value="edie">Edie</option>
+            <option value="mimi">Mimi</option>
             <option value="trevor">Trevor</option>
             <option value="dotty">Dotty</option>
+            <option value="anton">Anton</option>
         </select>
         <br>
         <label for="comments">Comments:</label>
@@ -59,8 +59,6 @@
         <br>
         <input id="submit" type="submit" />
     </form>
-    </form>
-
 
     <section id="map-wrapper">
         <iframe id="map"
@@ -76,7 +74,7 @@
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
         </ul>
-        <h3>Copyright © Homes for Hounds 2023</h2>
+        <h3>Copyright © Homes for Hounds 2023</h3>
     </footer>
 </body>
 
