--- a/index.html
+++ b/index.html
@@ -34,13 +34,27 @@
             <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs settle
                 into retirement easily and make wonderful pets.</p>
             <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
-                suitable
-                for all types of households including those with children and other animals.</p>
+                suitable for all types of households including those with children and other animals.</p>
             <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
-                house.
-                they have a naturally calm, laid-back temperament and adapt from life on the track to life on the couch
-                with
-                ease. </p>
+                house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on the
+                couch with ease. </p>
+            <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been traced back
+                over 4,000
+                years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
+                home, you are taking
+                on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
+            <p>Facts & Figures</p>
+            <ul>
+                <li>Height: Male - 71-76cm, Female - 69-71cm</li>
+                <li>Weight: Male - 27-40KG, Female - 26-34KG</li>
+                <li>Average Retirement Age: Between 3 - 5 years of age</li>
+                <li>Average Lifespan: Up to 15 years!</li>
+                <li>Exercise Required: Perfectly happy with two twenty minute walks a day Greyhounds are built for
+                    speed, not stamina, and
+                    use up their energy in short bursts.</li>
+                <li>Temperament - Intelligent, Gentle, Affectionate & Even Tempered.</li>
+            </ul>
+            </p>
         </div>
         <div class="col-sm-4">
             <h2>Latest News</h2>
@@ -48,8 +62,7 @@
             <p>01/05/23 Open day at the centre, why not come along and meet our hounds.</p>
             <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
                 activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
-            <p>01/01/23 Happy New Year from all the hounds!
-            </p>
+            <p>01/01/23 Happy New Year from all the hounds!</p>
         </div>
         <div class="col-sm-4">
             <h2>Articles</h2>
@@ -70,6 +83,12 @@
                 <li><a rel="external"
                         href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
                         target="_blank">Guide to nail and teeth care</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/harnesses"
+                        target="_blank">Choosing the right harness</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/correct-weight-for-a-greyhound"
+                        target="_blank">Is your greyhound the correct weight?</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                        target="_blank">Feeding a balanced diet</a></li>
             </ul>
         </div>
     </div>
@@ -81,9 +100,8 @@
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
-
         </ul>
-        <h3>Copyright © Homes for Hounds 2023</h2>
+        <h3>Copyright © Homes for Hounds 2023</h3>
     </footer>
 </body>
 
