bootstrap used to add 2 columns on form.html

--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
                 <li><a rel="external"
                         href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
                         target="_blank">Guide to nail and teeth care</a></li>
-                <li><a rel="external" href="https://www.barleykennels.co.uk/care/harnesses"
-                        target="_blank">Choosing the right harness</a></li>
+                <li><a rel="external" href="https://www.barleykennels.co.uk/care/harnesses" target="_blank">Choosing the
+                        right harness</a></li>
                 <li><a rel="external" href="https://www.barleykennels.co.uk/care/correct-weight-for-a-greyhound"
                         target="_blank">Is your greyhound the correct weight?</a></li>
-                <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                <li><a rel="external"
+                        href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
                         target="_blank">Feeding a balanced diet</a></li>
             </ul>
         </div>
