items added to news on index.html

--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
             <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
                 activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
             <p>01/01/23 Happy New Year from all the hounds!</p>
+            <p>25/12/22 Here are our hounds enjoying their Christmas dinner - hopefully next Christmas they will all have homes of their own<br>
+                <img src="assets/images/greyhound_and_sunset.jpg" alt="dog eating" id="blog-image"></p>
+                <p>01/01/23 Happy New Year from all the hounds!</p>
+                <p>01/01/23 Happy New Year from all the hounds!</p>
+                <p>01/01/23 Happy New Year from all the hounds!</p>
+                <p>01/01/23 Happy New Year from all the hounds!</p>
         </div>
         <div class="col-sm-4">
             <h2>Articles</h2>
-            <p>Please follow the links for info on this gentle breed and articles on how to care for them.</p>
+            <p>Please follow the links below for info on this gentle breed and articles on how to care for them.</p>
             <ul>
                 <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
                         target="_blank">Are you ready to adopt a greyhound?</a></li>
