hyperlink added to blog, header moved below navbar for consistency

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <h1>Homes for Hounds</h1>
-    </header>
-
     <nav>
         <a href="index.html" aria-label="Go to the top of the page">Home</a>
         <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
-
-    <div>
-        <img src="assets/images/greyhound_and_sunset.jpg" alt="greyhound in silhouette" id="hero-image">
+    <header>
+        <div>
+            <h1>Homes for Hounds</h1>
+    </header>
+    <div class="wrapper" img src="assets/images/greyhound_and_sunset.jpg" alt="dog eating" id="hero-image">
+    </div>
+    <!--<div class="hero-image">
+        <img src="assets/images/greyhound_and_sunset.jpg" alt="dog in silhouette" id="hero-image">-->
     </div>
 
     <div class="row">
@@ -63,12 +63,19 @@
             <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
                 activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
             <p>01/01/23 Happy New Year from all the hounds!</p>
-            <p>25/12/22 Here are our hounds enjoying their Christmas dinner - hopefully next Christmas they will all have homes of their own<br>
-                <img src="assets/images/greyhound_and_sunset.jpg" alt="dog eating" id="blog-image"></p>
-                <p>01/01/23 Happy New Year from all the hounds!</p>
-                <p>01/01/23 Happy New Year from all the hounds!</p>
-                <p>01/01/23 Happy New Year from all the hounds!</p>
-                <p>01/01/23 Happy New Year from all the hounds!</p>
+            <p>25/12/22 Here are our hounds enjoying their Christmas dinner - hopefully next Christmas they will all
+                have homes of their own<br>
+                <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
+            </p>
+            <p>24/09/22 There was a fantastic turnout of over 30 sighthounds for the annual <a
+                    href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound Walk.</a>
+                Thanks to all the volunteers who helped to walk them at Cosmeston Park near Cardiff<br>
+                <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
+                <a rel="external" href="ttps://www.greatglobalgreyhoundwalk.co.uk" target="_blank"></a>
+            </p>
+            <p>06/08/22 Make sure you keep your dogs cool in this hot weather. Here at the centre our dogs are chilling
+                out in their kennels during the day and being walked either early in the morning or late evening.
+                Remember greyhounds do not cope well with heat</p>
         </div>
         <div class="col-sm-4">
             <h2>Articles</h2>
