--- a/dogs.html
+++ b/dogs.html
@@ -17,8 +17,9 @@
         <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
         <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
     </nav>
-        <p class="dogs">Here are all the dogs currently available. If you are interested and need more information please contact us
-            using the form on the 'Get in Touch' page</p>
+    <p class="dogs">Here are all the dogs currently available. If you are interested and need more information please
+        contact us
+        using the form on the 'Get in Touch' page</p>
     <div class="card-deck">
         <div class="card bg-light text-dark">
             <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
