hero image updated

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <header>
         <div>
             <h1>Homes for Hounds</h1>
+        </div>
     </header>
-    <div class="wrapper" img src="assets/images/greyhound_and_sunset.jpg" alt="dog eating" id="hero-image">
-    </div>
-    <!--<div class="hero-image">
-        <img src="assets/images/greyhound_and_sunset.jpg" alt="dog in silhouette" id="hero-image">-->
-    </div>
+
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
 
     <div class="row">
         <div class="col-sm-4">
@@ -43,7 +43,7 @@
                 years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
                 home, you are taking
                 on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
-            <p>Facts & Figures</p>
+            <p><strong>Facts & Figures</strong></p>
             <ul>
                 <li>Height: Male - 71-76cm, Female - 69-71cm</li>
                 <li>Weight: Male - 27-40KG, Female - 26-34KG</li>
@@ -58,22 +58,24 @@
         </div>
         <div class="col-sm-4">
             <h2>Latest News</h2>
-            <p>25/06/23 New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
-            <p>01/05/23 Open day at the centre, why not come along and meet our hounds.</p>
-            <p>14/04/23 Thank you to our wonderful volunteers who have raised a staggering £1,374 through fund-raising
+            <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the Meet our Dogs page.</p>
+            <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds.</p>
+            <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering £1,374
+                through fund-raising
                 activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
-            <p>01/01/23 Happy New Year from all the hounds!</p>
-            <p>25/12/22 Here are our hounds enjoying their Christmas dinner - hopefully next Christmas they will all
+            <p><strong>01/01/23</strong> Happy New Year from all the hounds!</p>
+            <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas dinner -
+                hopefully next Christmas they will all
                 have homes of their own<br>
                 <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
             </p>
-            <p>24/09/22 There was a fantastic turnout of over 30 sighthounds for the annual <a
+            <p><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds for the annual <a
                     href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound Walk.</a>
                 Thanks to all the volunteers who helped to walk them at Cosmeston Park near Cardiff<br>
-                <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
                 <a rel="external" href="ttps://www.greatglobalgreyhoundwalk.co.uk" target="_blank"></a>
             </p>
-            <p>06/08/22 Make sure you keep your dogs cool in this hot weather. Here at the centre our dogs are chilling
+            <p><strong>06/08/22</strong> Make sure you keep your dogs cool in this hot weather. Here at the centre our
+                dogs are chilling
                 out in their kennels during the day and being walked either early in the morning or late evening.
                 Remember greyhounds do not cope well with heat</p>
         </div>
