html and css code tidied, removed defunct code

--- a/dogs.html
+++ b/dogs.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <nav>
-        <a href="index.html" aria-label="Go to the top of the page">Home</a>
-        <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
-        <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
-    </nav>
+    <ul class="nav-bar">
+        <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
+        <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
+    </ul>
     <p>Here are all the dogs currently available. If you are interested and need more information please
         contact us using the form on the 'Get in Touch' page</p>
     <div class="card-deck">
