--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 </head>
 
 <body>
-    <nav>
-        <a href="index.html" aria-label="Go to the top of the page">Home</a>
-        <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
-        <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
-    </nav>
-    <header>
-        <div>
-            <h1>Homes for Hounds</h1>
-        </div>
-    </header>
+    <ul class="nav-bar">
+        <li><a class="active" href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
+        <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
+    </ul>
+
+    <div>
+        <h1>Homes for Hounds</h1>
+    </div>
 
     <section id="hero-outer">
         <div id="hero-image"></div>
@@ -43,7 +42,7 @@
                 years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
                 home, you are taking
                 on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
-            <p><strong>Facts & Figures</strong></p>
+            <strong>Facts & Figures</strong><br>
             <ul>
                 <li>Height: Male - 71-76cm, Female - 69-71cm</li>
                 <li>Weight: Male - 27-40KG, Female - 26-34KG</li>
@@ -54,7 +53,6 @@
                     use up their energy in short bursts.</li>
                 <li>Temperament - Intelligent, Gentle, Affectionate & Even Tempered.</li>
             </ul>
-            </p>
         </div>
         <div class="col-sm-4">
             <h2>Latest News</h2>
