--- a/form.html
+++ b/form.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <nav>
-        <a href="index.html" aria-label="Go to the top of the page">Home</a>
-        <a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a>
-        <a href="form.html" aria-label="Go to contact information section">Get in Touch</a>
-    </nav>
+    <ul class="nav-bar">
+        <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
+        <li><a class="active" href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
+    </ul>
     <p class="get-in-touch">Please use this form to enquire about our dogs. We love to hear from potential new owners
         and will get back
         to you to discuss the rehoming process in more detail</p>
