input boxes on contact form styled

--- a/dogs.html
+++ b/dogs.html
@@ -85,7 +85,7 @@
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
 
         </ul>
-        <h3>Copyright © Homes for Hounds 2023</h3>
+        <h3 class="copyright">Copyright © Homes for Hounds 2023</h3>
     </footer>
 </body>
 
