--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
             <p><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds for the annual <a
                     href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound Walk.</a>
                 Thanks to all the volunteers who helped to walk them at Cosmeston Park near Cardiff<br>
-                <a rel="external" href="ttps://www.greatglobalgreyhoundwalk.co.uk" target="_blank"></a>
-            </p>
             <p><strong>06/08/22</strong> Make sure you keep your dogs cool in this hot weather. Here at the centre our
                 dogs are chilling
                 out in their kennels during the day and being walked either early in the morning or late evening.
@@ -115,8 +113,9 @@
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
         </ul>
-        <h3>Copyright © Homes for Hounds 2023</h3>
+        <h3 class="copyright">Copyright © Homes for Hounds 2023</h3>
     </footer>
+
 </body>
 
 </html>
