--- a/form.html
+++ b/form.html
@@ -27,13 +27,13 @@
                 <h2>Get in Touch</h2>
                 <form method="POST" action="https://formdump.codeinstitute.net/">
                     <label for="name">Name:</label>
-                    <input id="name" type="text" required>
+                    <input id="name" type="text" size="27" required>
                     <br>
                     <label for="email">Email:</label>
-                    <input id="email" type="email" required>
+                    <input id="email" type="email" size="27" required>
                     <br>
                     <label for="phone">Phone No:</label>
-                    <input id="phone" type="tel">
+                    <input id="phone" type="tel" size="23">
                     <br>
                     <label for="dogs">Name of dog:</label>
                     <select id="dogs" name="dogs">
@@ -77,7 +77,7 @@
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
         </ul>
-        <h3>Copyright © Homes for Hounds 2023</h3>
+        <h3 class="copyright">Copyright © Homes for Hounds 2023</h3>
     </footer>
 </body>
 
