styling added to text boxes on 'dogs' and 'form' html

--- a/dogs.html
+++ b/dogs.html
@@ -16,9 +16,11 @@
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
-    </ul>
-    <p>Here are all the dogs currently available. If you are interested and need more information please
-        contact us using the form on the 'Get in Touch' page</p>
+    </ul><br>
+    <p class="text1">Here are all the dogs currently available for adoption. If you see a dog you are interested in and
+        would like more information, please
+        contact us using the form on the <a href="form.html">Get in Touch</a> page. We are always happy to talk about
+        how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
     <div class="card-deck">
         <div class="card bg-light text-dark">
             <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
