attempts to re-align social network buttons

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                         target="_blank">What is your greyhound thinking?</a></li>
                 <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
                         target="_blank">Travelling safely with your greyhound</a></li>
+                <li><a rel="external" href="https://greyhoundrescuewales.co.uk/dog-body-language/"
+                        target="_blank">Reading dog body language</a></li>
+                <li><a rel="external"
+                        href="https://www.greyhoundtrust.org.uk/assets/000/004/114/crate_training_original.pdf?1581612865"
+                        target="_blank">Crate training</a></li>
                 <li><a rel="external"
                         href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
                         target="_blank">Understanding separation anxiety</a></li>
@@ -101,11 +106,15 @@
                 <li><a rel="external"
                         href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
                         target="_blank">Feeding a balanced diet</a></li>
+                <li><a rel="external"
+                        href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
+                        target="_blank">Teaching basic commands</a></li>
+                <li><a rel="external" href="https://greyhoundrescuewales.co.uk/resource-guarding/"
+                        target="_blank">Resource guarding</a></li>
             </ul>
         </div>
     </div>
     </div>
-
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
@@ -113,9 +122,7 @@
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
         </ul>
-        <h3 class="copyright">Copyright © Homes for Hounds 2023</h3>
     </footer>
-
 </body>
 
 </html>
