entries added to blog

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 dogs are chilling
                 out in their kennels during the day and being walked either early in the morning or late evening.
                 Remember greyhounds do not cope well with heat</p>
+            <p><strong>23/05/22</strong> Congratulations to Frankie who has found his forever home with the lovely
+                Claire & James.</p>
+            <p><strong>14/02/22</strong> Happy Valentine's day from the hounds. All our dogs are looking for their
+                special someone to love them...Could that be you?</p>
         </div>
         <div class="col-sm-4">
             <h2>Articles</h2>
