home page wireframe added

--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get in Touch</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
@@ -26,13 +26,13 @@
                 <h2>Get in Touch</h2>
                 <form method="POST" action="https://formdump.codeinstitute.net/">
                     <label for="name">Name:</label>
-                    <input id="name" type="text" size="45" required>
+                    <input id="name" type="text" size="35" required>
                     <br>
                     <label for="email">Email:</label>
-                    <input id="email" type="email" size="45" required>
+                    <input id="email" type="email" size="35" required>
                     <br>
                     <label for="phone">Phone No:</label>
-                    <input id="phone" type="tel" size="41">
+                    <input id="phone" type="tel" size="31">
                     <br>
                     <label for="dogs">Name of dog:</label>
                     <select id="dogs" name="dogs">
@@ -45,10 +45,11 @@
                     <br>
                     <label for="comments">Comments:</label>
                     <br>
-                    <textarea name="comments" id="comments" rows="11" cols="57"> </textarea>
+                    <textarea name="comments" id="comments" rows="11" cols="45"> </textarea>
                     <br>
                     <input id="submit" type="submit" />
-                </form>
+                </form><br>
+                <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
             </div>
             <div class="col-sm-6">
                 <h2>How to Find Us</h2>
@@ -71,7 +72,7 @@
     </div>
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
