--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
             <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
