social media icons centred in footer

--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <title>Get in Touch</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                     <br>
                     <textarea name="comments" id="comments" rows="11" cols="45"> </textarea>
                     <br>
-                    <input id="submit" type="submit" />
+                    <input id="submit" type="submit">
                 </form><br>
                 <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
             </div>
@@ -58,12 +58,12 @@
                     Greyhound<br>
                     GR37 4ND<br>
                     Telephone: 0000 000 000
-                <section>
+                <div>
                     <iframe id="map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
                         width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </section><br>
+                </div><br>
                 <p>Opening times:<br>
                     Mon-Fri 2pm-4pm<br>
                     Sat & Sun 10am-4pm</p>
@@ -72,10 +72,10 @@
     </div>
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </footer>
 </body>
