--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Homes for Hounds</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -22,9 +22,9 @@
         <h1>Homes for Hounds</h1>
     </div>
 
-    <section id="hero-outer">
+    <div id="hero-outer">
         <div id="hero-image"></div>
-    </section>
+    </div>
 
     <div class="row">
         <div class="col-sm-4">
@@ -117,13 +117,12 @@
             </ul>
         </div>
     </div>
-    </div>
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </footer>
 </body>
