images resized to improve performance

--- a/dogs.html
+++ b/dogs.html
@@ -23,7 +23,7 @@
         how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
     <div class="card-deck">
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/hawk_1.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
                 <p class="card-text">7 yr old, Female</p>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/mimi_1.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Mimi</h4>
                 <p class="card-text">2 yr old, Female</p>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/trevor_new.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/trevor_new_1.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
                 <p class="card-text">2 yr old, Male</p>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/dotty_1.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/anton.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/anton_1.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Anton</h4>
                 <p class="card-text">3 yr old, Male</p>
