hero image not loading on git pages. added src to html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="hero-outer">
-        <div id="hero-image"></div>
+        <div id="hero-image" src="assets/images/hawk_1.jpg" alt="Closeup of dogs face">></div>
     </div>
 
     <div class="row">
