fixed error in hero image filename

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </div>
 
     <div id="hero-outer">
-        <div id="hero-image" src="assets/images/hawk_1.jpg" alt="Closeup of dogs face">></div>
+        <div id="hero-image">
+            <img src="assets/images/tonia-kraakman1_resize620compress.jpg" alt="Closeup of dogs face">
+        </div>
     </div>
 
     <div class="row">
